tabs for pages are work

--- a/src/index.html
+++ b/src/index.html
@@ -163,11 +163,12 @@
             <!-- Tabs -->
             <div class="tab mt-50 mb-50 block-center">
                 <div class="tab-panel" data-tabpanel>
-                    <div class="tab-item tab-item__active">Content First</div>
-                    <div class="tab-item">Content Second</div>
-                    <div class="tab-item">Content Third</div>
+                    <div class="tab-item tab-item__active" data-num="0">Content First</div>
+                    <div class="tab-item" data-num="1">Content Second</div>
+                    <div class="tab-item" data-num="2">Content Third</div>
                 </div>
                 <div class="tab-content tab-content__active">
+                    <h1>1</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis dicta dolore id
                     culpa fuga, ut quidem
                     laboriosam odit explicabo dolorum, praesentium aperiam, repellat quaerat expedita cupiditate
@@ -178,6 +179,7 @@
                     ipsa commodi odio!
                 </div>
                 <div class="tab-content">
+                    <h1>2</h1>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis dicta dolore id culpa
                     fuga, ut quidem
                     laboriosam odit explicabo dolorum, praesentium aperiam, repellat quaerat expedita cupiditate ullam
@@ -189,6 +191,7 @@
                     <hr>
                 </div>
                 <div class="tab-content">
+                    <h1>3</h1>
                     <hr>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur debitis dicta dolore id culpa
                     fuga, ut quidem
