accordion for pages

--- a/src/index.html
+++ b/src/index.html
@@ -206,6 +206,42 @@
                     <hr>
                 </div>
             </div>
+            <!-- Accordion -->
+            <div class="accordion mt-50 mb-50 block-center">
+                <div class="accordion-header">
+                    First element
+                </div>
+                <div class="accordion-content">
+                    <div class="accordion-inner">
+                        <h3>1</h3>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste illo magnam magni dolor
+                        doloremque, voluptatem facilis qui fugiat minus, soluta, distinctio quas eaque repudiandae
+                        molestiae? Facilis impedit libero recusandae tenetur.
+                    </div>
+                </div>
+                <div class="accordion-header">
+                    Second element
+                </div>
+                <div class="accordion-content">
+                    <div class="accordion-inner">
+                        <h3>2</h3>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste illo magnam magni dolor
+                        doloremque, voluptatem facilis qui fugiat minus, soluta, distinctio quas eaque repudiandae
+                        molestiae? Facilis impedit libero recusandae tenetur.
+                    </div>
+                </div>
+                <div class="accordion-header">
+                    Third element
+                </div>
+                <div class="accordion-content">
+                    <div class="accordion-inner">
+                        <h3>3</h3>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste illo magnam magni dolor
+                        doloremque, voluptatem facilis qui fugiat minus, soluta, distinctio quas eaque repudiandae
+                        molestiae? Facilis impedit libero recusandae tenetur.
+                    </div>
+                </div>
+            </div>
         </div>
         <script src='js/main.js'></script>
     </body>
