page carousel, start

--- a/src/index.html
+++ b/src/index.html
@@ -242,6 +242,27 @@
                     </div>
                 </div>
             </div>
+            <!-- carousel -->
+            <div class="carousel mt-50 mb-50 d-block ma">
+                <ol class="carousel-indicators">
+                    <li class="carousel__active" data-dots-num="0"></li>
+                    <li data-dots-num="1"></li>
+                    <li data-dots-num="2"></li>
+                </ol>
+                <div class="carousel-closet">
+                    <div class="carousel-clides">
+                        <div class="carousel-item"><img src="./img/neelsInGray.jpg" alt="cat Neels in gray"></div>
+                        <div class="carousel-item"><img src="./img/banner-xl.jpg" alt="cat watch PC"></div>
+                        <div class="carousel-item"><img src="./img/neels.jpg" alt="cat Neels in color"></div>
+                    </div>
+                </div>
+            </div>
+            <a href="#" class="carousel-prev" data-prev="prev">
+                <span class="carousel-prev-icon">&lt;</span>
+            </a>
+            <a href="#" class="carousel-next" data-prev="next">
+                <span class="carousel-prev-icon">&gt;</span>
+            </a>
         </div>
         <script src='js/main.js'></script>
     </body>
