--- a/src/index.html
+++ b/src/index.html
@@ -256,13 +256,13 @@
                         <div class="carousel-item"><img src="./img/neels.jpg" alt="cat Neels in color"></div>
                     </div>
                 </div>
+                <a href="#" class="carousel-prev" data-displacement="prev">
+                    <span class="carousel-prev-icon">&lt;</span>
+                </a>
+                <a href="#" class="carousel-next" data-displacement="next">
+                    <span class="carousel-prev-icon">&gt;</span>
+                </a>
             </div>
-            <a href="#" class="carousel-prev" data-prev="prev">
-                <span class="carousel-prev-icon">&lt;</span>
-            </a>
-            <a href="#" class="carousel-next" data-prev="next">
-                <span class="carousel-prev-icon">&gt;</span>
-            </a>
         </div>
         <script src='js/main.js'></script>
     </body>
