--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@
                 </div>
             </div>
             <!-- carousel -->
-            <div class="carousel mt-50 mb-50 d-block ma">
+            <div class="carousel mt-50 mb-50 d-block ma" id='carousel'>
                 <ol class="carousel-indicators">
                     <li class="carousel__active" data-dots-num="0"></li>
                     <li data-dots-num="1"></li>
@@ -256,12 +256,16 @@
                         <div class="carousel-item"><img src="./img/neels.jpg" alt="cat Neels in color"></div>
                     </div>
                 </div>
-                <a href="#" class="carousel-prev" data-displacement="prev">
-                    <span class="carousel-prev-icon">&lt;</span>
-                </a>
-                <a href="#" class="carousel-next" data-displacement="next">
-                    <span class="carousel-prev-icon">&gt;</span>
-                </a>
+                <div class="prev">
+                    <a href="#" class="carousel-prev prev" data-prev="prev">
+                        <span class="carousel-prev-icon prev" data-prev="prev">&lt;</span>
+                    </a>
+                </div>
+                <div class="next">
+                    <a href="#" class="carousel-next next" data-next="next">
+                        <span class="carousel-prev-icon next" data-next="next">&gt;</span>
+                    </a>
+                </div>
             </div>
         </div>
         <script src='js/main.js'></script>
